Add macOS install instructions

--- a/INSTALL
+++ b/INSTALL
@@ -51,6 +51,12 @@ How to install PBS using the configure script.
       libexpat-dev libssl-dev libxext-dev libxft-dev autoconf \
       automake
 
+  For macOS systems using MacPorts you should run the following command as root:
+
+    port install autoconf automake libtool pkgconfig \
+      expat hwloc libedit libical openssl postgresql12 python38 \
+      swig-python tcl tk xorg-libX11 xorg-libXt
+
 2. Install the prerequisite packages for running PBS. In addition
   to the commands below, you should also install a text editor of
   your choosing (vim, emacs, gedit, etc.).
@@ -85,6 +91,11 @@ How to install PBS using the configure script.
     apt install expat libedit2 postgresql python3 postgresql-contrib sendmail-bin \
       sudo tcl tk libical3 postgresql-server-dev-all
 
+  For macOS systems using MacPorts you should run the following command as root:
+
+    port install expat libedit libical openssl postgresql12-server python38 \
+      tcl tk
+
 3. Open a terminal as a normal (non-root) user, unpack the PBS
   tarball, and cd to the package directory.
 
@@ -111,6 +122,12 @@ How to install PBS using the configure script.
   following command:
 
     ./configure --prefix=/opt/pbs --libexecdir=/opt/pbs/libexec
+
+  For macOS systems using MacPorts you should run the following commands:
+
+    export CPATH=/opt/local/include/postgresql12:/opt/local/include
+    export LIBRARY_PATH=/opt/local/lib/postgresql12:/opt/local/lib
+    ./configure --with-swig=/opt/local --with-tcl=/opt/local
 
   If PTL needs to be installed along with PBS use the option
   "--enable-ptl" (see note 5 below)
