--- a/INSTALL
+++ b/INSTALL
@@ -57,6 +57,14 @@ How to install PBS using the configure script.
       libexpat-dev libssl-dev libxext-dev libxft-dev autoconf \
       automake g++
 
+  For Ubuntu-24.04 systems you should run the following command as root:
+
+    apt install gcc make libtool libhwloc-dev libx11-dev \
+      libxt-dev libedit-dev libical-dev ncurses-dev perl \
+      postgresql-server-dev-all postgresql-contrib python3-dev tcl-dev tk-dev swig \
+      libexpat-dev libssl-dev libxext-dev libxft-dev autoconf \
+      automake g++ libcjson-dev
+
   For macOS systems using MacPorts you should run the following command as root:
 
     port install autoconf automake libtool pkgconfig \
@@ -93,6 +101,11 @@ How to install PBS using the configure script.
       sudo tcl tk libical3 libcjson1
 
   For Ubuntu-18.04 systems you should run the following command as root:
+
+    apt install expat libedit2 postgresql python3 postgresql-contrib sendmail-bin \
+      sudo tcl tk libical3 postgresql-server-dev-all
+
+  For Ubuntu-24.04 systems you should run the following command as root:
 
     apt install expat libedit2 postgresql python3 postgresql-contrib sendmail-bin \
       sudo tcl tk libical3 postgresql-server-dev-all
